# esp32c6-bare-metal

./: .gitignore  CMakeLists.txt  README.md
cmake/: sdk-utils.cmake  toolchain-esp32c6.cmake
components/esp_common/: CMakeLists.txt
components/esp_rom/: CMakeLists.txt
components/hal/: CMakeLists.txt
components/hal/esp32c6/include/hal/: i2c_ll.h  lpwdt_ll.h  usb_serial_jtag_ll.h
components/i2c_driver/: CMakeLists.txt  i2c_driver.c  i2c_driver.h
components/interrupts/: interrupt_plic.c  interrupt_plic.h
components/mtimer/: CMakeLists.txt  mtimer.h
components/riscv/include/riscv/: rv_utils.h
components/soc/: CMakeLists.txt
components/soc/include/soc/: rtc_cntl_periph.h
components/spi_driver/: CMakeLists.txt  spi_driver.c  spi_driver.h
components/usb_serial/: usb_serial.h
core/delay/: CMakeLists.txt  delay.h
core/esp_common/include/: esp_attr.h  esp_compiler.h
core/esp_rom/include/: esp_rom_sys.h
core/hal/include/hal/: spi_types.h
core/hal/platform_port/include/hal/: assert.h
core/interrupts/: CMakeLists.txt  interrupts.c  interrupts.h
core/mtimer/: mtimer.c
core/riscv/: CMakeLists.txt
core/soc/include/soc/: rtc_cntl_periph.h  spi_periph.h
core/startup/: startup.c
drivers/gpio_drv/: CMakeLists.txt  gpio_drv.h
drivers/i2c_drv/: CMakeLists.txt  i2c_drv.c  i2c_drv.h
drivers/spi_drv/: CMakeLists.txt  spi_drv.c  spi_drv.h
drivers/usb_serial/: CMakeLists.txt  usb_serial.c
examples/blinky/: CMakeLists.txt  build.sh
examples/blinky/source/: main.c
ld/: esp32c6.ld
libraries/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
sdk-config/: sdkconfig.h
toolchain/: toolchain-esp32c6.cmake
